[gd_scene load_steps=4 format=3 uid="uid://ch08auwmtt4b2"]

[ext_resource type="Script" path="res://enemy_2.gd" id="1_pk44o"]
[ext_resource type="Texture2D" uid="uid://bqmwhae78g4xo" path="res://ShmupSprites/Alien05.png" id="2_0no7v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mk2ty"]
size = Vector2(77, 94)

[node name="Hitbox" type="Area2D" groups=["enemy"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_pk44o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_mk2ty")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_0no7v")

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = 55.0
offset_right = 35.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
show_percentage = false

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
